# swarm_fixed_wing_collision_avoidance

./: README.md
1230/: README
Theoretical_background/: README
cpp/: README
cpp/0105/: README
cpp/0109/: CMakeLists.txt  README
cpp/0109/controller/: FlightEnvelope.cpp  GainParameter.c  GainParameter.h  MainController.h  Maincontroller.cpp  NdiParameter.c  NdiParameter.h  PitchSetpoint.cpp  RollratePitchrateSetpoint.cpp  ThrustSetpoint.cpp
cpp/0109/fixed_wing_aircraft_model/: CurrentState.h
cpp/0109/matrix/: README
cpp/0109/practice/: practice.cpp
cpp/0113/: README
cpp/0114/: README
cpp/0115/: README
cpp/0117/: README
cpp/0117/fixed_wing_uav_0117_gitupload_v2/: CMakeLists.txt
cpp/0117/fixed_wing_uav_0117_gitupload_v2/agent/: Agent.cpp  Agent.h
cpp/0117/fixed_wing_uav_0117_gitupload_v2/controller/: Maincontroller.cpp  RollratePitchrateSetpoint.cpp
cpp/0117/fixed_wing_uav_0117_gitupload_v2/fixed_wing_aircraft_model/: FixedwingDynamics.h
cpp/0117/fixed_wing_uav_0117_gitupload_v2/formation_guidance/: FlockingGuidance.cpp  FlockingGuidance.h  FlockingParameter.c  FlockingParameter.h  LeaderFollowerGuidance.cpp  LeaderFollowerGuidance.h  LeaderFollowerParameter.c  MainFormationGuidance.cpp  MainFormationGuidance.h
cpp/0117/fixed_wing_uav_0117_gitupload_v2/make_csv/: agent_0.csv  check_debug.py  make_video.py  plotting_state
cpp/0117/fixed_wing_uav_0117_gitupload_v2/matrix/: integration.hpp
cpp/0117/fixed_wing_uav_0117_gitupload_v2/practice/: practice.cpp
cpp/0117/fixed_wing_uav_0117_gitupload_v2/ts_message/: TcMessage.h  TsMessage.h
cpp/0119/: README
cpp/0119/fixed_wing_uav_0119/: CMakeLists.txt
cpp/0127/: README
cpp/0127/fixed_wing_uav_0127/: CMakeLists.txt
cpp/0128/: README
cpp/0129/: READEME
cpp/0129/agent/: Agent.cpp  Agent.h
cpp/0129/build_initial_condition/: Initial_condition_builder.cpp  initial_conditions.txt
cpp/0129/controller/: BodyAxisRateSetpoint.h  FlightEnvelope.cpp  MainController.h  Maincontroller.cpp  NdiParameter.h  RollratePitchrateSetpoint.cpp  ThrustSetpoint.cpp
cpp/0130/: Agent.h  CMakeLists.txt
cpp/0130/agent/: Agent.cpp
cpp/0130/build_initial_condition/: initial_conditions.txt
cpp/0130/controller/: BodyAxisRateSetpoint.cpp  FlightEnvelope.cpp  GainParameter.c  GainParameter.h  NdiParameter.c  RollratePitchrateSetpoint.cpp  ThrustSetpoint.cpp  ThrustSetpoint.h
cpp/0130/fixed_wing_aircraft_model/: FixedwingDynamics.h  FixedwingSpec.c
cpp/0130/formation_guidance/: FlockingGuidance.cpp  FlockingGuidance.h  FlockingParameter.h  LeaderFollowerParameter.c  MainFormationGuidance.cpp
cpp/0130/make_csv/: SimulationConfig.h  agent_0.csv  agent_1.csv  agent_2.csv  agent_3.csv  agent_4.csv  aircraft_spec.json  error.py  plotting_state.py  sim_config.json
cpp/0130/practice/: practice.cpp
cpp/0130/propagation/: DynamicsLinearization.cpp  DynamicsLinearization.h
cpp/0130/ts_message/: TcMessage.h  TsMessage.h
cpp/020/agent/: Agent.cpp
cpp/020/build_initial_condition/: Initial_condition_builder.cpp
cpp/020/controller/: BodyAxisRateSetpoint.h  FlightEnvelope.cpp  MainController.h  Maincontroller.cpp  NdiParameter.h  PitchSetpoint.h  RollratePitchrateSetpoint.cpp  RollratePitchrateSetpoint.h
cpp/020/fixed_wing_aircraft_model/: CurrentState.h  FixedwingDynamics.cpp
cpp/020/formation_guidance/: LeaderFollowerGuidance.h  LeaderFollowerParameter.h
cpp/020/make_csv/: FixedWingLog.h  agent_0.csv  agent_1.csv  agent_2.csv  agent_3.csv  agent_4.csv  analysis_plot.py  zoh_error_agent_0.csv  zoh_error_agent_1.csv  zoh_error_agent_2.csv
cpp/020/matrix/: stdlib_imports.hpp
cpp/020/practice/: practice.cpp
cpp/020/propagation/: StatePropagation.h
cpp/0203/: CMakeLists.txt  README  깃업로드하는 법.txt
cpp/0209/: READEM
px4_ros2/: README
px4_ros2/0323/ws_px4/src/collision_avoidance/: CMakeLists.txt
px4_ros2/0323/ws_px4/src/collision_avoidance/include/collision_avoidance/: CollisionAvoidanceControl.hpp
px4_ros2/0323/ws_px4/src/collision_avoidance/log/: latest_build
px4_ros2/0323/ws_px4/src/collision_avoidance/src/: CollisionAvoidanceControl.cpp  main.cpp
px4_ros2/0407_v1/: README
px4_ros2/0407_v1/collision_avoidance/: CMakeLists.txt
px4_ros2/0407_v1/collision_avoidance/config/: ros_params.yaml  spawn_config.yaml
px4_ros2/0407_v1/collision_avoidance/include/collision_avoidance/: CollisionAvoidanceControl.hpp  FormationControl.hpp  StateType.hpp  TransferSameCoordinate.hpp  VtolGuidanceExecutor.hpp  VtolGuidanceMode.hpp
px4_ros2/0407_v1/collision_avoidance/src/: TransferSameCoordinate.cpp  VtolGuidanceExecutor.cpp  VtolGuidanceMode.cpp  main.cpp
px4_ros2/0408/: terminal.txt
px4_ros2/0413/: README
px4_ros2/0413/collision_avoidance/: package.xml
px4_ros2/0413/collision_avoidance/config/: airframe_spec.yaml  flocking_params.yaml
px4_ros2/0413/collision_avoidance/include/collision_avoidance/: FlockingGuidance.hpp  FormationMode.hpp  StateType.hpp
px4_ros2/0413/collision_avoidance/scripts/: convert_px4_params.py
px4_ros2/0413/collision_avoidance/src/: FlockingGuidance.cpp  FormationMode.cpp  TransferSameCoordinate.cpp  VtolGuidanceExecutor.cpp  main.cpp  transformer_main.cpp
px4_ros2/RPI_5_docker_images/: 0413
simulinke_prototype/0104/: README
simulinke_prototype/0106/: README
simulinke_prototype/0109/: README
symbolic_derivation/: README
symbolic_derivation/Cpp_code_gen/: jaccobian_builder.m  propagation_fcl_jacobian.m  test_prop.m
(+274 files in other folders)
