<?xml version="1.0"?>
  <package format="3">
    <name>collision_avoidance</name>
    <version>0.0.1</version>
    <description>Multi VTOL hover and collision avoidance</description>
    <maintainer email="your@email.com">leedonghyuck</maintainer>
    <license>BSD-3-Clause</license>

    <buildtool_depend>eigen3_cmake_module</buildtool_depend>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>eigen</build_depend>
    <depend>rclcpp</depend>
    <depend>px4_msgs</depend>
    <depend>px4_ros2_cpp</depend>

    <export>
      <build_type>ament_cmake</build_type>
    </export>
  </package>